--- a/lora-openhermes-output/adapter_config.json
+++ b/lora-openhermes-output/adapter_config.json
@@ -20,6 +20,7 @@
   "megatron_core": "megatron.core",
   "modules_to_save": null,
   "peft_type": "LORA",
+  "qalora_group_size": 16,
   "r": 8,
   "rank_pattern": {},
   "revision": null,
@@ -30,5 +31,6 @@
   "task_type": "CAUSAL_LM",
   "trainable_token_indices": null,
   "use_dora": false,
+  "use_qalora": false,
   "use_rslora": false
 }
